[metadata]
name = grabbr
version = 1.0.0
author = Kraus17th
description = Advanced banner grabbing utility for network ports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kraus17th/grabbr
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: System :: Networking
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =
    rich>=13.0.0
    pysocks>=1.7.1

[options.entry_points]
console_scripts =
    grabbr = grabbr:main

